Bug 520587: [9] add-reads and add-exports should understand ALL-UNNAMED
Change-Id: I557fde5a25cc36c937a001f1f5d6450ce255e5bb